WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214904
ASSERTION FAILED: !isInRoutingArbitrationForArbitrator(proxy) in WebKit::SharedArbitrator::beginRoutingArbitrationForArbitrator
https://bugs.webkit.org/show_bug.cgi?id=214904
Summary
ASSERTION FAILED: !isInRoutingArbitrationForArbitrator(proxy) in WebKit::Shar...
Peng Liu
Reported
2020-07-28 17:43:52 PDT
ASSERTION FAILED: !isInRoutingArbitrationForArbitrator(proxy) in WebKit::SharedArbitrator::beginRoutingArbitrationForArbitrator
Attachments
Patch
(3.36 KB, patch)
2020-07-28 17:57 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2020-07-28 17:45:55 PDT
<
rdar://problem/66231025
>
Peng Liu
Comment 2
2020-07-28 17:57:03 PDT
Created
attachment 405430
[details]
Patch
EWS
Comment 3
2020-07-30 10:30:49 PDT
Committed
r265089
: <
https://trac.webkit.org/changeset/265089
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405430
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug