ASSERTION FAILED: !isInRoutingArbitrationForArbitrator(proxy) in WebKit::SharedArbitrator::beginRoutingArbitrationForArbitrator https://bugs.webkit.org/show_bug.cgi?id=214904

Reviewed by Jer Noble.

Only add an AudioSessionRoutingArbitratorProxy to the WeakHashSet (m_arbitrators)
if the routing arbitration is completed successfully.

* UIProcess/Media/cocoa/AudioSessionRoutingArbitratorProxyCocoa.mm:
(WebKit::SharedArbitrator::beginRoutingArbitrationForArbitrator):


Canonical link: https://commits.webkit.org/227789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265089 268f45cc-cd09-0410-ab3c-d52691b4dbfc